--- a/estilo.css
+++ b/estilo.css
@@ -33,3 +33,21 @@ div {
 	right:200px ;
 	left:800px;
 }
+table{
+	border-collapse: collapse;
+	margin: 20px;
+  	padding: 20px;
+}
+
+ tr{
+  margin: 15px;
+  	padding: 15px;
+  	border: black 5px solid;
+  }
+  td{
+  	 margin: 15px;
+  	padding: 15px;
+
+  }
+	
+	
