--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -18,8 +18,9 @@ body {
 }
 
 header{
-	height: 150px;
-	background: #005883
+	height: 100px;
+	background: #FFFFFF
+
 }
 
 header h1 {
@@ -53,13 +54,6 @@ li a {
 li a:hover:not(.active) {
     background-color: #f2d679;
 }
-
-
-
-
-
-
-
 
 #contenido {
 	width: 700px;
