--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,3 +1,10 @@
+body{
+	background: #FFFFFF;
+	color: #000000;
+	font-family: 'Open Sans', 'sans-serif'
+}
+
+
 div {
 	width: 10%;
 	height: 50px;
