--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -43,7 +43,7 @@ li {
 
 }
 
-li a {
+.nav li a {
     display: block;
     color: white;
     text-align: center;
@@ -53,13 +53,32 @@ li a {
     font-family: 'Franklin Gothic Heavy', arial;
     font-size: 17px;
     text-shadow: 4px 4px 4px #aaa;
-
 }
+
+.nav li ul{
+	display: none;
+	position:absolute;
+	min-width: 30px;
+}
+
+.nav > li{
+	display: left;
+} 
+
+.nav li:hover> ul{
+	display: block;
+}
+
 
 li a:hover:not(.active) {
     background-color: #f2d679;
 }
 
+.nav  li ul li {
+	position:relative;
+	font-size: 5px;
+
+ }
 
 #contenido {
 	width: 700px;
@@ -105,4 +124,5 @@ footer h2 {
 	font-family: 'Franklin Gothic Heavy', arial;
     font-size: 20px;
     text-shadow: 4px 4px 4px #aaa;
+    line-height: 50px;
 }
