--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -8,6 +8,7 @@ body {
 	color: white;
 }
 
+
 #contenedor {
 	width: 960px;
 	margin: auto;
@@ -28,57 +29,93 @@ header h1 {
 	line-height: 130px;
 }
 
+/* menu */
 
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #F0B429;
+#inicio.jpg{
+  position:fixed;
+  right:0;
+  width: 16px;
+  height: 16px;
 }
 
-li {
-    float: left;
+#menu ul {
+ list-style:none;
+ margin:0;
+ padding:0;
 
-}
-
-.nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 45px;
-    font:bold 16px flan;
-    text-decoration: none;
-    font-family: 'Franklin Gothic Heavy', arial;
-    font-size: 17px;
-    text-shadow: 4px 4px 4px #aaa;
-}
-
-.nav li ul{
-	display: none;
-	position:absolute;
-	min-width: 30px;
-}
-
-.nav > li{
-	display: left;
-} 
-
-.nav li:hover> ul{
-	display: block;
 }
 
 
-li a:hover:not(.active) {
-    background-color: #f2d679;
+/* items del menu */
+
+#menu ul li {
+ background-color:#F0B429;
+ float: left;
+ position: relative
 }
 
-.nav  li ul li {
-	position:relative;
-	font-size: 5px;
+/* enlaces del menu */
 
- }
+#menu ul a {
+ display:block;
+ color:#fff;
+ text-align: center;
+ text-decoration:none;
+ font:bold 20px flan;
+ font-size:15px;
+ padding:14px 52px;
+ font-family: 'Franklin Gothic Heavy', arial;
+ text-transform:uppercase;
+ letter-spacing:1px;
+ text-shadow: 4px 4px 4px #aaa;
+}
+
+/* items del menu */
+
+#menu ul li {
+ position:relative;
+ float:left;
+ margin:0;
+ padding:0;
+
+}
+
+/* efecto al pasar el ratón por los items del menu */
+
+#menu ul li:hover:not(.active) {
+ background:#f2d679;
+}
+
+/* menu desplegable */
+
+#menu ul ul {
+ display:none;
+ position:absolute;
+ top:100%;
+ left:0;
+ background:#F0B429;
+ padding:20px;
+}
+
+/* items del menu desplegable */
+
+#menu ul ul li {
+ float:none;
+ width:150px
+}
+
+/* enlaces de los items del menu desplegable */
+
+#menu ul ul a {
+ line-height:100%;
+ padding:14px 14px;
+}
+
+/* items del menu desplegable al pasar el ratón */
+
+#menu ul li:hover > ul {
+ display:block;
+}
 
 #contenido {
 	width: 700px;
